# fastapi_zero

./: .coverage  .gitignore  pyproject.toml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: d0aa4dda9fca_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
